--- a/WebSpider/package.json
+++ b/WebSpider/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@types/cheerio": "^0.22.21",
+    "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
     "superagent": "^6.0.0"
   }
