--- a/WebSpider/package.json
+++ b/WebSpider/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev:build": "tsc -w",
-    "dev:start": "nodemon  build/index.js",
-    "dev": "concurrently \"npm run dev:build\" \"npm run dev:start\""
+    "dev:start": "nodemon ./build/index.js",
+    "dev": "tsc && concurrently \"npm run dev:build\" \"npm run dev:start\""
   },
   "nodemonConfig": {
     "ignore": [
@@ -27,6 +27,7 @@
     "@types/cheerio": "^0.22.21",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
+    "express": "^4.17.1",
     "superagent": "^6.0.0"
   }
 }
