--- a/WebSpider/package.json
+++ b/WebSpider/package.json
@@ -25,8 +25,11 @@
   },
   "dependencies": {
     "@types/cheerio": "^0.22.21",
+    "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
+    "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "superagent": "^6.0.0"
   }
