TypeScript 爬虫项目前端项目优化

--- a/react-project-typescript/package.json
+++ b/react-project-typescript/package.json
@@ -12,6 +12,9 @@
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.1",
     "axios": "^0.20.0",
+    "echarts": "^4.8.0",
+    "echarts-for-react": "^2.0.16",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
